fix: fixed file input overflow parent container

--- a/src/styles/components/common/form/file.scss
+++ b/src/styles/components/common/form/file.scss
@@ -10,6 +10,7 @@
     @include line-limit(1);
     color: $color-black;
     padding-top: rem(12);
+    overflow-wrap: anywhere;
   }
 
   .card {
